syntax = "proto3";

import "cloud/filestore/public/api/protos/headers.proto";
import "cloud/storage/core/protos/error.proto";

package NCloud.NFileStore.NProto;

option go_package = "a.yandex-team.ru/cloud/filestore/public/api/protos";

////////////////////////////////////////////////////////////////////////////////
// Health-check request/response

message TPingRequest
{
    // Optional request headers.
    THeaders Headers = 1;
}

message TPingResponse
{
    // Optional error, set only if error happened.
    NCloud.NProto.TError Error = 1;
}
